applications/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: test-app
  labels:
    app: test-app
    name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
      name: test-app
  template:
    metadata:
      labels:
        app: test-app
        name: test-app
    spec:
      containers:
      - image: quay.tingnkai.com:8443/finance/hello:latest
        name: test-app
        ports:
        - containerPort: 8080
          name: test-app
      resources:
        limits: 
          cpu: "100m"
          memory: "256Mi"
        requests: 
          cpu: "100m"
          memory: "256Mi"
