applications/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app
    name: test-app
  name: test-app
spec:
  ports:
  - port: 8080
  selector:
    name: test-app
