applications/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: test-app
spec:
  host: test-app-my-namespace.apps.ocp4.tingnkai.com
  port:
    targetPort: 8080 
  to:
    kind: Service
    name: test-app
